welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: ')' expected but ',' found.
	if (sleepIn == true,true) {return true}
                           ^sleepIn:4: error: illegal start of simple expression
}
^